docs: fix swagger annotation
